--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,1 +1,17 @@
-
+.tooltiptext{
+    position: absolute;
+    background-color: red;
+    padding: 5px 10px;
+    border-radius: 5px;
+    top:100%;
+    left:50%;
+    transform: translate((-50%));
+    white-space: nowrap;
+    margin-top: 5px;
+    z-index: 1;
+}
+.tooltip{
+        position: relative;
+        display: inline-block;
+        cursor: pointer;
+}
